--- a/DependencySummary/DependencySummary.csproj
+++ b/DependencySummary/DependencySummary.csproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Summary\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -169,6 +170,7 @@
     <Compile Include="Controllers\PackagesController.cs" />
     <Compile Include="Controllers\ComponentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SummaryController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -187,10 +189,16 @@
     <Compile Include="Models\PackageContext.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ComponentService.cs" />
+    <Compile Include="Services\PackageService.cs" />
+    <Compile Include="Services\SummaryService.cs" />
     <Compile Include="ViewModels\ComponentListItem.cs" />
     <Compile Include="ViewModels\Component.cs" />
     <Compile Include="ViewModels\Package.cs" />
     <Compile Include="ViewModels\Project.cs" />
+    <Compile Include="ViewModels\SummaryComponent.cs" />
+    <Compile Include="ViewModels\SummaryPackage.cs" />
+    <Compile Include="ViewModels\SummaryVersion.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
