--- a/DependencySummary/DependencySummary.csproj
+++ b/DependencySummary/DependencySummary.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Services\ISummaryService.cs" />
     <Compile Include="Services\PackageService.cs" />
     <Compile Include="Services\SummaryService.cs" />
+    <Compile Include="ViewModels\ComponentDetails.cs" />
     <Compile Include="ViewModels\ComponentListItem.cs" />
     <Compile Include="ViewModels\Component.cs" />
     <Compile Include="ViewModels\Package.cs" />
