Commented out connection string

--- a/DependencySummary/Web.config
+++ b/DependencySummary/Web.config
@@ -81,7 +81,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PackageContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DependencySummary.Models.PackageContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="PackageContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=DependencySummary.Models.PackageContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.codedom>
     <compilers>
