--- a/DependencyAnalyserRunner/DependencyAnalyserRunner.csproj
+++ b/DependencyAnalyserRunner/DependencyAnalyserRunner.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Args.cs" />
+    <Compile Include="Models\ConsolidationLevel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
