Added LastUpdated property and MaskExceptions argument

--- a/DependencySummary/DependencySummary.csproj
+++ b/DependencySummary/DependencySummary.csproj
@@ -198,6 +198,10 @@
     <Compile Include="Migrations\201602291652587_AddedTeamCityBuildId.Designer.cs">
       <DependentUpon>201602291652587_AddedTeamCityBuildId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603031000313_AddedLastUpdatedProperty.cs" />
+    <Compile Include="Migrations\201603031000313_AddedLastUpdatedProperty.Designer.cs">
+      <DependentUpon>201603031000313_AddedLastUpdatedProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Component.cs" />
     <Compile Include="Models\Package.cs" />
@@ -305,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602291652587_AddedTeamCityBuildId.resx">
       <DependentUpon>201602291652587_AddedTeamCityBuildId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603031000313_AddedLastUpdatedProperty.resx">
+      <DependentUpon>201603031000313_AddedLastUpdatedProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
